--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Favicon and icons -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=1759830227" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=1759830227" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=1759830227" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1759830227" />
